--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "nodemon": "^1.18.10"
+  },
+  "devDependencies": {
+    "prettier": "^1.19.1"
   }
 }
