--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/mxviteri/advanced-first-web-server#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "nodemon": "^1.18.10"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.2"
   }
 }
+
