--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "homepage": "https://github.com/mxviteri/advanced-first-web-server#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "nodemon": "^1.18.10"
-  }
+  },
+  "devDependencies": {}
 }
