--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/mxviteri/advanced-first-web-server#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "nodemon": "^1.18.10"
+    "express": "^4.17.1",
+    "nodemon": "^1.18.10",
+    "uuid": "^8.3.2"
   }
 }
